--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.8.1
 boto3==1.35.44
 botocore==1.35.44
+certifi==2025.4.26
+cloudinary==1.44.0
 Django==5.1
 django-storages==1.14.4
 jmespath==1.0.1
