--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ jmespath==1.0.1
 pillow==10.4.0
 psycopg2==2.9.9
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 s3transfer==0.10.3
 six==1.16.0
 sqlparse==0.5.1
